--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tareas-iniciales-erik-jorge-carlos-ruben",
+  "name": "pl-2017",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
